# rag_youtuber_project

./: .gitignore  README.md  api.py  explorations.ipynb  ingestion_md.py  lancedb_database.ipynb  pyproject.toml  requirements.txt
backend/: constants.py  data_models.py  rag.py
frontend/: app.py
